Version 1.3.6+svn:
 * build system
   * Fixed autoconf/automake builds so that --disable-python-installl
     will not try to create the default install directory for python
     stuff when it isn't needed. Otherwise if you aren't root, make
     errors out.
 * language and i18n:
   * updated translations: Danish, Japanese, Swedish
 * multiplayer:
   * improvements to the sound of the timer countdown
   * unit descriptions are no longer evaluated for the recruitment checksum
     and thus avoiding an OOS error when different languages are used. 
     The change is incompatible with older trunk versions fixes (bug #9472).
   * Show the (possibly bogus) GPV and fog settings of games with "Use map
     settings" on in a darker font. (patch #771 by uso)
   * the random start ToD option is now properly saved and loaded when use map
     default is used (bug #9532)
   * "Default Era" is now renamed to "Era of Turmoil" (bug #4210) in
     accordance with the master history.
 * user interface:
   * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
   * Add an additional line below the minimap in the "Multiplayer->Create game"
     screen that displays the size of the selected map. (patch #776 by uso)
   * Add a tooltip with the experience modifier for the units XP display.
 * WML engine:
   * now [base_unit]id= inside [unit] can extend upon existing unit types
   * new extra_defines key to define in campaigns some other preprocessor
     symbol *before* the files are repreprocessed
 * miscellaneous and bug fixes
   * added a .desktop entry for the editor so that it is shown in the kde/gnome
     menu
   * rewrote the config merge routine (should improve parse time slightly)
   * various code cleanups
   * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.

Version 1.3.6:
 * language and i18n:
   * updated translations: Danish, Finnish, French, German
 * multiplayer: