@@ -17,9 +17,11 @@
 #include <iostream>
 #include <vector>
 
+#include "events.hpp"
 #include "font.hpp"
 #include "image.hpp"
 #include "log.hpp"
+#include "preferences_display.hpp"
 #include "video.hpp"
 
 #define LOG_DP LOG_STREAM(info, display)
@@ -68,7 +70,28 @@ int main( int argc, char** argv )
 #endif
 
 namespace {
-bool fullScreen = false;
+	bool fullScreen = false;
+	int disallow_resize = 0;
+	class resize_monitor : public events::pump_monitor {
+		void process(events::pump_info &info) {
+			if(info.resize_dimensions.first >= min_allowed_width
+			&& info.resize_dimensions.second >= min_allowed_height
+			&& disallow_resize == 0) {
+				preferences::set_resolution(info.resize_dimensions);
+			}
+		}
+	};
+	resize_monitor resize_mon;
+}
+
+resize_lock::resize_lock()
+{
+	++disallow_resize;
+}
+
+resize_lock::~resize_lock()
+{
+	--disallow_resize;
 }
 
 static unsigned int get_flags(unsigned int flags)
